--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,7 +120,7 @@
                     <span>More</span>
                 </a>
             </li>
-            <li><a href="/login.html">
+            <li style="display: none;"><a href="/login.html">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
